--- a/css/styles.css
+++ b/css/styles.css
@@ -371,7 +371,6 @@ padding: 0.5rem;
 }
 
 .hero {
-    position: relative;
     text-align: center; 
     margin-top: 8rem;
 }
